# elba

./: README.rst  genindex.html  index.html  objects.inv  pyproject.toml  searchindex.js  setup.cfg
.github/workflows/: ci-cd-workflow.yml
_sources/: index.rst.txt
_static/: documentation_options.js
elba/: __init__.py
tests/: conftest.py  test_monkey_patch.py
tests/test_monkey_patch/: test_sphinx_output_basic_elba_off_napoleon_rtype_inline_autodoc_description_.txt  test_sphinx_output_basic_elba_off_napoleon_rtype_inline_autodoc_source_.txt  test_sphinx_output_basic_elba_off_napoleon_rtype_separate_autodoc_description_.txt  test_sphinx_output_basic_elba_off_napoleon_rtype_separate_autodoc_source_.txt  test_sphinx_output_basic_elba_on_napoleon_rtype_inline_autodoc_description_.txt  test_sphinx_output_basic_elba_on_napoleon_rtype_inline_autodoc_source_.txt  test_sphinx_output_with_autodoc_typehints_elba_off_Return_type_inline_.txt  test_sphinx_output_with_autodoc_typehints_elba_off_Return_type_separate_.txt  test_sphinx_output_with_autodoc_typehints_elba_on_Return_type_inline_.txt  test_sphinx_output_with_autodoc_typehints_elba_on_Return_type_separate_.txt
with_elba/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
with_elba/_modules/: index.html  with_elba.html
with_elba/_sources/: index.rst.txt
without_elba/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
without_elba/_modules/: index.html  without_elba.html
without_elba/_sources/: index.rst.txt
(+5 files in other folders)
