[metadata]
name = elba
keywords = python, sphinx, numpy, docstrings, type hints
author = Stephen McDowell
author_email = TBC
license = Apache 2.0

description = Automatic type hint inference support for Sphinx Napoleon Numpy Style

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Documentation :: Sphinx

[options]
packages = find:
include_package_data = True
python_requires = >=3.7

[options.extras_require]
tests =
    pytest-cov
    pytest >= 4.0
    sphinx
    sphinx-autodoc-typehints

dev =
    %(tests)s
